<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="309dp"
        android:layout_height="134dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="232dp"
        android:layout_height="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView"
        app:layout_constraintVertical_bias="0.359">

        <EditText
            android:id="@+id/emailFieldL"
            android:layout_width="232dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordFieldL"
            android:layout_width="232dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailFieldL" />

        <Button
            android:id="@+id/loginButtonL"
            android:layout_width="232dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#009999"
            android:text="@string/login"
            app:iconTint="#00A9BC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordFieldL" />

        <Button
            android:id="@+id/forgotPasswordButton"
            android:layout_width="232dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#009999"
            android:text="@string/forgot_password"
            app:iconTint="#00A9BC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButtonL" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#1B1B1E"
            android:text="@string/empty"
            app:iconTint="#00A9BC"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />

        <ImageView
            android:id="@+id/back2"
            android:layout_width="15dp"
            android:layout_height="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="@+id/backButton"
            app:layout_constraintStart_toStartOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>