<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountrySelectionActivity">

    <ImageView
        android:id="@+id/loginImageView2"
        android:layout_width="171dp"
        android:layout_height="72dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="357dp"
        android:layout_height="185dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/countryField"
            android:layout_width="228dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"
            android:hint=""
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.279"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promptText" />

        <Button
            android:id="@+id/surveyButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:backgroundTint="#1B1B1E"
            android:contentDescription="next button"
            android:text="@string/empty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toEndOf="@+id/countryField"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

        <ImageView
            android:id="@+id/back7"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/todo"
            android:rotation="180"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/surveyButton"
            app:layout_constraintEnd_toEndOf="@+id/surveyButton"
            app:layout_constraintStart_toStartOf="@+id/surveyButton"
            app:layout_constraintTop_toTopOf="@+id/surveyButton" />

        <TextView
            android:id="@+id/promptText"
            android:layout_width="275dp"
            android:layout_height="24dp"
            android:layout_marginTop="40dp"
            android:text="Please Enter Your Country"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>