<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="628dp">

        <ImageView
            android:id="@+id/loginImageView3"
            android:layout_width="327dp"
            android:layout_height="114dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126" />

        <TextView
            android:id="@+id/header2"
            android:layout_width="346dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="Complete this one-time survey to continue."
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginImageView3" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="347dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:text="@string/question_will_appear_here"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header2" />

        <RadioGroup
            android:id="@+id/choicesGroup"
            android:layout_width="345dp"
            android:layout_height="284dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:indeterminate="false"
        android:layout_height="49dp"
        android:progressTint="#009688" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="379dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1B1B1E"
            android:text="@string/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/previousButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:backgroundTint="#1B1B1E"
            android:text="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back4"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/previousButton"
            app:layout_constraintStart_toStartOf="@+id/previousButton"
            app:layout_constraintTop_toTopOf="@+id/previousButton" />

        <ImageView
            android:id="@+id/back5"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/todo"
            android:rotation="180"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="@+id/nextButton"
            app:layout_constraintStart_toStartOf="@+id/nextButton"
            app:layout_constraintTop_toTopOf="@+id/nextButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

